--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 													<a href="https://www.linkedin.com/in/emma-carr-6921a51a9/">let's connect</a>
 												</li>
 												<li class="icon solid fa-file">
-													<a target="_blank" href="EmmaCarrResume2023.pdf">resume</a>
+													<a target="_blank" href="assets\EmmaCarrResume2023 (1).pdf">resume</a>
 												</li>									
 											</ul>
 										</div>
