new project images

--- a/index.html
+++ b/index.html
@@ -45,18 +45,18 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="https://emcarr99.github.io/snackndash/" class="image featured"><img src="assets\images\Snack n' Dash.png" alt="" /></a>
+										<a href="https://emcarr99.github.io/snackndash/" class="image featured"><img src="assets\images/snackn'dash.png" alt="" /></a>
 										<header>
 											<h3>Project One</h3>
 										</header>
-										<p>Welcome to our one-stop shop for your next adventure.<br /><a href="https://github.com/emcarr99/busybee"> You can check out the repo here!</a></p>
+										<p>Welcome to our one-stop shop for your next adventure.<br /><a href="https://github.com/emcarr99/snackndash"> You can check out the repo here!</a></p>
 									</section>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
 
 								<!-- Feature -->
 									<section>
-										<a href="https://emcarr99.github.io/busybee/" class="image featured"><img src="assets/images/busybee.png" alt="" /></a>
+										<a href="https://emcarr99.github.io/busybee/" class="image featured"><img src="assets/images/busybee1.png" alt="" /></a>
 										<header>
 											<h3>Work Day Scheduler</h3>
 										</header>
@@ -68,7 +68,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="https://emcarr99.github.io/rad-password-man/" class="image featured"><img src="assets/images/password.png" alt="" /></a>
+										<a href="https://emcarr99.github.io/rad-password-man/" class="image featured"><img src="assets/images/passowrd1.png" alt="" /></a>
 										<header>
 											<h3>Get a password</h3>
 										</header>
@@ -80,7 +80,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="assets/images/weather.png" alt="" /></a>
+										<a href="#" class="image featured"><img src="assets/images/weather1.png" alt="" /></a>
 										<header>
 											<h3>5 day Weather Forecast</h3>
 										</header>
