--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>Emma Carr</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,15 +20,15 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Jane Doe</h1>
-							<p>Hyperspace Engineer</p>
+							<span class="image avatar48"><img src="images/EmmaCarr (8).png" alt="" /></span>
+							<h1 id="title">Emma Carr</h1>
+							<p>Web Developer</p>
 						</div>
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
+								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Home</span></a></li>
 								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
@@ -41,11 +41,10 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a target="_blank" href="assets\EmmaCarrResume2023 (1).pdf" class="icon solid fa-file"><span class="label"></span>Resume</a></li>
+							<li><a href="https://www.linkedin.com/in/emma-carr-6921a51a9/" class="icon brands fa-linkedin"><span class="label"></span></a></li>
+							<li><a href="https://github.com/emcarr99" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="mailto:lorenagracex@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -60,14 +59,11 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2 class="alt">Hi, I'm <strong>Emma</strong>!</h2>
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#portfolio" class="button scrolly">See what I've done!</a>
 							</footer>
 
 						</div>
@@ -81,51 +77,46 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
-
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="https://emcarr99.github.io/snackndash/" class="image fit"><img src="images/snackn'dash.png" alt="Snack n' Dash" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<h3> <a href="https://github.com/emcarr99/snackndash"> View repo here.</a> </h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="https://blank-space.herokuapp.com/" class="image fit"><img src="images/noteTaker.png" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
-										</header>
-									</article>
-								</div>
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-										<header>
-											<h3>Magna Nullam</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-										<header>
-											<h3>Natoque Vitae</h3>
+											<h3><a href="https://github.com/emcarr99/blankspacebaby"> View repo here.</a></h3>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="https://emcarr99.github.io/rad-password-man/" class="image fit"><img src="images/passowrd1.png" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3><a href="https://github.com/emcarr99/rad-password-man"> View repo here.</a></h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<a href="https://github.com/emcarr99/bluesclues" class="image fit"><img src="images/README.png" alt="" /></a>
 										<header>
-											<h3>Orci Convallis</h3>
+											<h3><a href="https://github.com/emcarr99/bluesclues"> View repo here.</a></h3>
+										</header>
+									</article>
+								</div>
+								<div class="col-4 col-12-mobile">
+									<article class="item">
+										<a href="https://github.com/emcarr99/doritos-and-fritos" class="image fit"><img src="images/mySQL.png" alt="" /></a>
+										<header>
+											<h3><a href="https://github.com/emcarr99/doritos-and-fritos"> View repo here.</a></h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="https://emcarr99.github.io/busybee/" class="image fit"><img src="images/busybee1.png" alt="" /></a>
+										<header>
+											<h3><a href="https://github.com/emcarr99/busybee"> View repo here.</a></h3>
 										</header>
 									</article>
 								</div>
@@ -142,14 +133,7 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
-
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>I'm currently enrolled in the Full-stack Flex Web Development Bootcamp and finding it to be an incredibly fulfilling experience. I find coding to be a natural fit for me because it speaks to how I process information. It's like solving a puzzle, and I love the feeling of accomplishment that comes with finding a solution to a problem. In addition to my analytical side, I'm also a creative person who loves to express myself through various mediums. One of my favorite artists is Taylor Swift, whose music inspires me to pursue my passions and be true to myself. I'm eager to continue learning and growing as a developer, and I'm excited to see where this journey takes me.</p>
 
 						</div>
 					</section>
@@ -159,13 +143,8 @@
 						<div class="container">
 
 							<header>
-								<h2>Contact</h2>
+								<h2>Let's Chat!</h2>
 							</header>
-
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
 
 							<form method="post" action="#">
 								<div class="row">
@@ -190,7 +169,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy;Emma Carr 2023. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</div>
