--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a target="_blank" href="assets\EmmaCarrResume2023 (1).pdf" class="icon solid fa-file"><span class="label"></span>Resume</a></li>
+							<li><a target="_blank" href="images/EmmaCarrResume2023 (2).pdf" class="icon solid fa-file"><span class="label"></span></a></li>
 							<li><a href="https://www.linkedin.com/in/emma-carr-6921a51a9/" class="icon brands fa-linkedin"><span class="label"></span></a></li>
 							<li><a href="https://github.com/emcarr99" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<li><a href="mailto:lorenagracex@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
@@ -82,13 +82,14 @@
 									<article class="item">
 										<a href="https://emcarr99.github.io/snackndash/" class="image fit"><img src="images/snackn'dash.png" alt="Snack n' Dash" /></a>
 										<header>
-											<h3> <a href="https://github.com/emcarr99/snackndash"> View repo here.</a> </h3>
+											<h3> <a href="https://github.com/emcarr99/snackndash">Take me there!</a></h3><b><a href="https://github.com/emcarr99/snackndash">View repo here.</a></b></h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="https://blank-space.herokuapp.com/" class="image fit"><img src="images/noteTaker.png" alt="" /></a>
 										<header>
-											<h3><a href="https://github.com/emcarr99/blankspacebaby"> View repo here.</a></h3>
+											<h3>
+													<h3> <a href="https://blank-space.herokuapp.com/">Take me there!</a></h3><b><a href="https://github.com/emcarr99/blankspacebaby">View repo here.</a></b></h3>
 										</header>
 									</article>
 								</div>
@@ -96,13 +97,13 @@
 									<article class="item">
 										<a href="https://emcarr99.github.io/rad-password-man/" class="image fit"><img src="images/passowrd1.png" alt="" /></a>
 										<header>
-											<h3><a href="https://github.com/emcarr99/rad-password-man"> View repo here.</a></h3>
+												<h3> <a href="https://emcarr99.github.io/rad-password-man/">Take me there!</a></h3><b><a href="https://github.com/emcarr99/rad-password-man">View repo here.</a></b></h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="https://github.com/emcarr99/bluesclues" class="image fit"><img src="images/README.png" alt="" /></a>
 										<header>
-											<h3><a href="https://github.com/emcarr99/bluesclues"> View repo here.</a></h3>
+												<h3> <a href="https://github.com/emcarr99/bluesclues">Take me there!</a></h3><b><a href="https://github.com/emcarr99/bluesclues">View repo here.</a></b></h3>
 										</header>
 									</article>
 								</div>
@@ -110,13 +111,13 @@
 									<article class="item">
 										<a href="https://github.com/emcarr99/doritos-and-fritos" class="image fit"><img src="images/mySQL.png" alt="" /></a>
 										<header>
-											<h3><a href="https://github.com/emcarr99/doritos-and-fritos"> View repo here.</a></h3>
+												<h3> <a href="https://github.com/emcarr99/doritos-and-fritos">Take me there!</a></h3><b><a href="https://github.com/emcarr99/doritos-and-fritos">View repo here.</a></b></h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="https://emcarr99.github.io/busybee/" class="image fit"><img src="images/busybee1.png" alt="" /></a>
 										<header>
-											<h3><a href="https://github.com/emcarr99/busybee"> View repo here.</a></h3>
+												<h3> <a href="https://emcarr99.github.io/busybee/"">Take me there!</a></h3><b><a href="https://github.com/emcarr99/busybee">View repo here.</a></b></h3>
 										</header>
 									</article>
 								</div>
