--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 								<h2>Let's Chat!</h2>
 							</header>
 
-							<form method="post" action="#">
+							<form method="post" action="#" data-netlify="true">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
